# sudoku

./: CMakeLists.txt  ColorColumn.qml  CustomButton.qml  Main.qml  Player.qml  README.md  Save.qml  SudokuGrid.qml  gametimer.cpp  gametimer.h  grid.cpp  grid.h  main.cpp  player.cpp  player.h  qml.qrc  theme.cpp
components/: ColorColumn.qml  ColorRow.qml  CustomButton.qml  IconButton.qml  MainMenu.qml  Player.qml  Save.qml  SavePanel.qml  SudokuGrid.qml  ThemeSwitch.qml  TimerControls.qml  UserDialog.qml
mreze/: 1.csv  1rjesenje.txt  2.txt  3.csv  4.csv  4.txt
src/: gametimer.cpp  gametimer.h  grid.cpp  grid.h  theme.h
